--- a/.deinrc
+++ b/.deinrc
@@ -17,6 +17,9 @@ call dein#add('Shougo/dein.vim')
 call dein#add('Shougo/neosnippet.vim')
 call dein#add('Shougo/neosnippet-snippets')
 call dein#add('itchyny/lightline.vim')
+call dein#add('scrooloose/nerdtree')
+call dein#add('jacoborus/tender')
+call dein#add('ryanoasis/vim-devicons')
 
 " You can specify revision/branch/tag.
 call dein#add('Shougo/vimshell', { 'rev': '3787e5' })
