--- a/.deinrc
+++ b/.deinrc
@@ -9,23 +9,23 @@ set runtimepath^=/Users/cat2koban/.vim/bundle/repos/github.com/Shougo/dein.vim
 " Required:
 call dein#begin(expand('/Users/cat2koban/.vim/bundle'))
 
-" Let dein manage dein
-" Required:
 call dein#add('Shougo/dein.vim')
 
-" Add or remove your plugins here:
 call dein#add('Shougo/neosnippet.vim')
 call dein#add('Shougo/neosnippet-snippets')
 call dein#add('itchyny/lightline.vim')
 call dein#add('scrooloose/nerdtree')
 call dein#add('jacoborus/tender')
 call dein#add('ryanoasis/vim-devicons')
+call dein#add('joshdick/onedark.vim')
 
 " You can specify revision/branch/tag.
 call dein#add('Shougo/vimshell', { 'rev': '3787e5' })
 
-" Required:
 call dein#end()
+
+let g:onedark_termcolors=16
+colorscheme onedark
 
 " Required:
 filetype plugin indent on
