--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
 set-option -g status-right-length 60
 
 # status-right のフォーマットを指定する。
-set-option -g status-right "#[fg=colour255,bg=colour241] #h | LA: #(cut -d' ' -f-3 /proc/loadavg) | %m/%d %H:%M:%S#[default]"
+set-option -g status-right "#[fg=colour255,bg=colour241] | %m/%d %H:%M:%S#[default]"
 
 # window-status のフォーマットを指定する。
 set-window-option -g window-status-format " #I: #W "
