tmux の設定を一新
- fish shell にログイン時, neo-cowsay する
- goenv の導入

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,29 +1,66 @@
-# status line を更新する間隔を 1 秒にする
-set-option -g status-interval 1
+# prefix を Ctrl + J に変更
+set -g prefix C-j
+unbind-key C-b
+bind-key C-j send-prefix
 
-# window-status を中央揃えで配置する
-set-option -g status-justify "centre"
+# カーソルキーで移動
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# status line の背景色を指定する。
+# デフォルトシェルを fish に
+set-option -g default-shell "/usr/local/bin/fish"
+
+# ウィンドウのインデックスを1から始める
+set -g base-index 1
+
+# | でペインを縦に分割する
+bind | split-window -h
+
+# - でペインを横に分割する
+bind - split-window -v
+
+# mouse の有効
+set-option -g mouse on
+
+# mouse でのコピー
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+# default statusbar colors
 set-option -g status-bg "colour238"
-
-# status line の文字色を指定する。
 set-option -g status-fg "colour255"
 
-# status-left の最大の長さを指定する。
-set-option -g status-left-length 20
+# pane border
+#set-option -g pane-border-fg white
+set-option -g pane-border-style fg=white
+set-option -g pane-active-border-style fg=colour45 #base01
 
-# status-left のフォーマットを指定する。
-set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+# pane number display
+set-option -g display-panes-active-colour blue
+set-option -g display-panes-colour white
 
-# status-right の最大の長さを指定する。
-set-option -g status-right-length 60
+# tmux interval
+set-option -g status-interval 1
 
-# status-right のフォーマットを指定する。
-set-option -g status-right "#[fg=colour255,bg=colour241] | %m/%d %H:%M:%S#[default]"
+# window justify
+set-option -g status-justify left
 
-# window-status のフォーマットを指定する。
-set-window-option -g window-status-format " #I: #W "
+# status-bar left
+set-option -g status-left-length 90
+#set-option -g status-left "#[fg=colour255,bg=colour125][#S]#[default]"
+set -g status-left '#[fg=red]#{?client_prefix,#[reverse],} ❐ #S #[default]'
+## status-bar right
+set-option -g status-right-length 90
+set-option -g status-right "#[fg=white] %H:%M:%S #[default]"
 
-# カレントウィンドウの window-status のフォーマットを指定する
+# enable visual notification
+set-window-option -g monitor-activity on
+set-option -g visual-activity on
+
+# window-option
+set -g window-status-separator ''
+set-window-option -g window-status-format "#[fg=white] #I:#W#F #[default]"
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
