tmux の prefix-key を Ctrl + t に修正

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # prefix を Ctrl + J に変更
-set -g prefix C-j
+set -g prefix C-t
 unbind-key C-b
-bind-key C-j send-prefix
+bind-key C-t send-prefix
 
 # カーソルキーで移動
 bind h select-pane -L
