Update configure for git

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Noritomo Taba
-  email = cat2koban@users.noreply.github.com
+	name = cat2koban
+	email = cat2koban@users.noreply.github.com
 	signingkey = FA15F572A2DB76CE
 
 [core]
