git log/checkoutのaliasを追加した

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,7 +46,7 @@ set-option -g display-panes-colour white
 set-option -g status-interval 1
 
 # window justify
-set-option -g status-justify left
+set-option -g status-justify centre
 
 # status-bar left
 set-option -g status-left-length 90
