modified mapping for fzf

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -28,3 +28,17 @@
 
 [gpg]
   program = gpg
+
+[alias]
+  today = "!f () {\
+               git log --oneline --reverse --branches \
+               --since=midnight --date=iso \
+               --author=\"$(git config user.name)\" \
+               --format=\" - %C(auto)%h%Creset : %s %C(green)(%ad)%Creset\";\
+           };f"
+  yesterday = "!f () {\
+               git log --oneline --reverse --branches \
+               --since=yesterday --date=iso \
+               --author=\"$(git config user.name)\" \
+               --format=\" - %C(auto)%h%Creset : %s %C(green)(%ad)%Creset\";\
+           };f"
