--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,9 +26,12 @@ bind - split-window -v
 set-option -g mouse on
 
 # mouse でのコピー
-unbind -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi MouseDown1Pane send-keys -X clear-selection
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+set-option -g mouse on
+bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind-key -n WheelDownPane select-pane -t= \; send-keys -M
+setw -g mode-keys vi
+
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # default statusbar colors
 set-option -g status-bg "colour238"
