--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,9 +9,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# デフォルトシェルを fish に
-set-option -g default-shell "/usr/local/bin/fish"
-# set-option -g default-shell "/bin/zsh"
+set-option -g default-shell "/bin/zsh"
 
 # ウィンドウのインデックスを1から始める
 set -g base-index 1
