--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -12,7 +12,7 @@
   diffFilter = delta --color-only
 
 [delta]
-  features = side-by-side line-numbers decorations
+  features = line-numbers decorations
   whitespace-error-style = 22 reverse
 
 [delta "decorations"]
@@ -50,5 +50,3 @@
 [url "git@github.com:"]
     insteadOf = https://github.com/
 
-[pull]
-  rebase = true
